# Sailkapena

./: .gitignore  CMakeLists.txt  ClassificationWindow.cpp  CountDownWidget.cpp  CountDownWidget.h  README.md  build.sh  install.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
data/: Zerrenda copy.csv  Zerrenda.csv  excel_plantila.ods  proba_excel.csv  txapelketa_3.csv  txapelketa_emaitzak.ods  txapelketa_emaitzak.xlsx
doc/: Parte hartzaileen izenak Txapelketa 2024.docx  Parte hartzaileen izenak Txapelketa 2024.txt
src/: ClassificationWindow.h  CountDownWidget.cpp  CountDownWidget.h  Player.cpp  Player.h  PublicWindow.cpp  PublicWindow.h  Taula io.cpp  Taula.cpp  Taula.h  Txapelketa.cpp  Txapelketa.h  Txapelketa_io.cpp  main.cpp  mainwindow.cpp  mainwindow.h  setLabel.h
